# p118_final

./: .gitignore  README.md  make_density_plots.py  make_movie.sh  make_vs1_plots.py
data/inits/pressure_waves_lowres/: config.nml  dnit2s.mat  dox2s.mat  doxs.mat  neutral_perts.m  temp.mat  velx.mat  velz.mat
data/inits/pressure_waves_midres/: config.nml  get_neutral_data.py  neutral_perts.m
data/simulations/eq_run/: 20130219_18000.000000.h5  20130219_19800.000000.h5  20130219_21600.000000.h5  20130219_23400.000000.h5  20130219_25200.000000.h5  20130219_27000.000000.h5  20130219_28800.000000.h5  20130219_30600.000000.h5  20130219_32400.000000.h5  20130219_34200.000000.h5  20130219_36000.000000.h5  20130219_37800.000000.h5  20130219_39600.000000.h5  20130219_41400.000000.h5  20130219_43200.000000.h5  20130219_45000.000000.h5  20130219_46800.000000.h5  20130219_48600.000000.h5  20130219_50400.000000.h5  20130219_52200.000000.h5  20130219_54000.000000.h5  20130219_55800.000000.h5  20130219_57600.000000.h5  (+27 more)
gemini3d/ffilesystem/: .gitignore  AGENTS.md  API.md  CITATION.cff  CMakeLists.txt  CMakePresets.json  Makefile  README.md  Readme_android.md  Readme_cosmopolitan.md  Readme_cpp_stl.md  Readme_macos.md  android.cmake  cosmopolitan.cmake  ford.md  fpm.toml  memcheck.cmake  meson.build  meson_options.txt  options.cmake  sonar-project.properties
gemini3d/ffilesystem/.archive/: filesystem_cli.f90  main.cpp
gemini3d/ffilesystem/.github/workflows/: ci.yml  ci_bsd.yml.bak  ci_fpm.yml  ci_lint.yml.bak  ci_macos.yml  ci_meson.yml  ci_windows.yml  oneapi-linux.yml  oneapi-windows.yml.bak  oneapi_run_windows.bat
gemini3d/ffilesystem/.github/workflows/composite-build/: action.yml
gemini3d/ffilesystem/.github/workflows/composite-ninja/: action.yml
gemini3d/ffilesystem/app/: benchmark.cpp  c_std.c  libc.cpp  libcxx.cpp  main.cpp
gemini3d/ffilesystem/app/fortran/: main.f90
gemini3d/ffilesystem/cmake/: CCheck.cmake  CppCheck.cmake  FScheck.cmake  compilers.cmake  config.cmake.in  cosmocc-override.cmake  f03type.f90  json_array.cmake  libstdcpp_version.cpp  stdcpp.cmake
gemini3d/ffilesystem/cmake/fs_check/: CMakeLists.txt  check_fs_symlink.cpp  lib_fs.cpp  lib_fs.f90  main.c  main.cpp  main.f90  meson.build
gemini3d/ffilesystem/example/: CMakeLists.txt  Readme.md  matlab_ffilesystem.m
gemini3d/ffilesystem/example/2/: main.cpp
gemini3d/ffilesystem/example/3/: main.c
gemini3d/ffilesystem/example/@Ffilesystem/: Ffilesystem.m
gemini3d/ffilesystem/example/boost/: CMakeLists.txt  Readme.md  boost_root.cpp
gemini3d/ffilesystem/include/: ffilesystem.h
gemini3d/ffilesystem/scripts/: is_exe.cmake  parent.cmake
gemini3d/ffilesystem/src/: absolute.cpp  c.cpp  copy.cpp  disk.cpp  env.cpp  equivalent.cpp  executable.cpp  home.cpp  inquire.cpp  lang.cpp  lexical.cpp  limits.cpp  log.cpp  memory.cpp  mkdir.cpp  move.cpp  normalize.cpp  os.c  parent.cpp  partition.cpp  permissions.cpp  platform.cpp  pure.cpp  relative.cpp  resolve.cpp  size.cpp  space.cpp  symlink.cpp  tempdir.cpp  time.cpp  touch.cpp  which.cpp  windows.cpp
gemini3d/ffilesystem/src/extra/: case.cpp  compiler.cpp  component.cpp  cygwin.cpp  exepath.cpp  libpath.cpp  locale.cpp  owner.cpp  random.cpp  removable.cpp  shell.cpp  sysctl.cpp  uid.cpp  uname.cpp  winsock.cpp
gemini3d/ffilesystem/src/fortran/: filesystem.F90  ifc0a.inc  ifc0b.inc  ifc1a.inc  path_methods.inc  path_type.inc
gemini3d/ffilesystem/test/: CMakeLists.txt  cli_exercise.txt  ffilesystem_test.h  meson.build  stdin.cmake  stdin_nul.cmake  test_permissions_setup.cmake
gemini3d/ffilesystem/test/core/: CMakeLists.txt  meson.build  test_OnDisk.cpp  test_absolute.cpp  test_absolute.f90  test_canonical.cpp  test_canonical.f90  test_copyfile.cpp  test_copyfile.f90  test_cygwin.f90  test_drop_slash.cpp  test_empty.cpp  test_env.cpp  test_env.f90  test_equivalent.cpp  test_equivalent.f90  test_exe.cpp  test_exe.f90  test_expanduser.cpp  test_expanduser.f90  test_filename.cpp  test_filename.f90  test_filesize.cpp  test_filesize.f90  test_hard_link.cpp  test_is_absolute.f90  test_is_appexec_alias.cpp  test_is_char.cpp  test_is_dir.f90  test_is_empty.cpp  test_is_empty.f90  test_is_fifo.cpp  test_is_prefix.cpp  test_is_subdir.cpp  test_is_subdir.f90  test_join.cpp  test_join.f90  test_memory.cpp  test_memory.f90  test_mkdir.f90  (+42 more)
gemini3d/ffilesystem/test/extra/: CMakeLists.txt  meson.build  test_exepath.cpp  test_exepath.f90  test_filesystem_type.f90  test_hostname.cpp  test_locale.cpp
gemini3d/ffilesystem/test/libpath/: CMakeLists.txt  test_libpath.cpp  test_libpath.f90
gemini3d/ffilesystem/test/symlink/: CMakeLists.txt  test_is_symlink.cpp  test_is_symlink.f90  test_symlink.cpp  test_symlink.f90
gemini3d/glow/: CMakeLists.txt  README.md  basic.nml  cglow.f90  glowbasic.f90  iri90.f  msise00_data.f  mzgrid.f90  nrlmsise00.f
gemini3d/glow/.github/workflows/: ci.yml
gemini3d/glow/cmake/: compilers.cmake  config.cmake.in  glow.cmake  install.cmake  options.cmake
gemini3d/msis/: .gitattributes  .gitmodules  CMakeLists.txt  README.md  options.cmake
gemini3d/msis/.github/workflows/: ci.yml
gemini3d/msis/app/: main.f90
gemini3d/msis/cmake/: compilers.cmake  config.cmake.in  install.cmake
gemini3d/msis/example/: CMakeLists.txt  CMakePresets.json
gemini3d/msis/src/: msis00_gfortran.f  msis2_dummy.f90  msis_interface.f90
gemini3d/msis/src/msis2/: CMakeLists.txt  msis2.1_test.f90  msis_calc.f90  msis_constants.F90  msis_dfn.f90  msis_gfn.f90  msis_gtd8d.f90  msis_init.F90  msis_tfn.f90  msis_utils.f90
gemini3d/msis/test/: CMakeLists.txt  msis2_test_out.h5  test_gen_in.f90  test_msis.f90
gemini3d/mumps/parmetis/: .gitmodules  CMakeLists.txt
gemini3d/mumps/parmetis/.github/workflows/: ci.yml
gemini3d/mumps/parmetis/METIS/GKlib/: CMakeLists.txt  CMakePresets.json  GKlibSystem.cmake  io.c
gemini3d/mumps/parmetis/METIS/GKlib/.github/workflows/: ci.yml
gemini3d/mumps/parmetis/METIS/conf/: gkbuild.cmake
gemini3d/mumps/parmetis/cmake/: config.cmake.in
gemini3d/mumps/parmetis/libparmetis/: CMakeLists.txt
plot/: inputs.py
(+4226 files in other folders)
